feat: major contao 5+ update

--- a/contao/templates/twig/content_element/team.html.twig
+++ b/contao/templates/twig/content_element/team.html.twig
@@ -1,4 +1,4 @@
-<div class="team-element{% if moduleSpacing %} margin-spacing--{{ moduleSpacing }}{% endif %}">
+<div class="team-element{% if data.moduleSpacing %} margin-spacing--{{ data.moduleSpacing }}{% endif %}">
     <div class="team-element__wrapper glide insicht insicht--fade-up">
         <div class="glide__track">
             <div class="team-element__list glide__slides">
